Scrollbar problem fixed
Fully functional, but I still need to hide particular modules in both quizzes and modules

--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,7 @@ code {
     scroll-behavior: auto !important;
   }
 }
+
+main {
+  min-height: 0; /* Prevent main from expanding beyond content */
+}
